# aruco-mag-field-vectors

./: README.md  filetest.txt  git-cheat-sheet.txt  just_run_out_to_file.sh  measured_visualize_parent_script.sh  parent_script.sh  quiver3AR.m  read_data_parent_script.sh  record_data_parent_script.sh  simulated_visualize_parent_script.sh  upload_most_recent.sh  visualize_parent_script.sh
22boardfiles/: 22board5config.yml
aruco/: most_recent_just_run_record.sh
aruco/CURRENTLY_NOT_WORKINGaru_test_project_2_boards/: demo.yml  (+2 more)
aruco/aru_3_board_stuff/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  WHAT_I_AM_DOING_MORNING  based_on_aruco_test.cpp  based_on_aruco_testOLD.cpp  cmake_stuff.sh  demo_new.yml  demo_new_works.yml  doTheMainLoopStuff.cpp  do_build_run_stuff_etc.sh  file_copy_stuff.sh  joljdrawingfuncs.cpp  just_run.sh  just_run_record.sh  just_run_visualize.sh  readArguments.cpp  testfile1.cpp
aruco/aru_3_board_stuff/buildOLD/: based_on_aruco_test
aruco/aru_3_board_stuff/buildOld_again/: CMakeCache.txt  based_on_aruco_test
aruco/aru_3_board_stuff/td/: 22board1config.yml
intermediate_data_files/: pos_data_done_with_python_to_do_octave.csv  pos_data_elephant.csv  pos_data_from_aruco.csv  pythonOutty.csv  vectors_to_show_in_final_step.yml
matlab_files/: demo.yml  generateinfinitewire.m  griddata3_test.m  just_run_quiver3AR_wrapper.m  mlec.m  new_csv_to_YAML_script.m  quiver3AR.m  quiver3AROneVector.m  ryan_script_to_merge_data.m
other/: example_C++_for_presentation.cpp  fun_with_reading_files.m
python_files/: csv_to_YAML_newer_than_octave.py
(+57 files in other folders)
